tests/checker/bad/bad_lib_type.scilla
scilla_version 0

(* The purpose of this test contract is to demonstrate that *)
(* type errors in variable declarations in libraries are *)
(* handled by the type checker. *)

library BadLibType

let x : Int128 = Uint32 0


(***************************************************)
(*             The contract definition             *)
(***************************************************)
contract BadLibType

(*  Parameters *)
()